fix heading size on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,10 @@
 
 @layer base {
   h1 {
-    @apply text-5xl font-semibold text-primary;
+    @apply text-3xl font-semibold text-primary md:text-5xl;
   }
   h2 {
-    @apply text-2xl font-semibold text-primary;
+    @apply text-lg font-semibold text-primary md:text-2xl;
   }
 }
 
